--- a/_config.yml
+++ b/_config.yml
@@ -29,6 +29,10 @@ menu:
     url: /
   - title: 归类
     url: /pages/categories.html
+  - title: 搜索
+    url: /pages/search.html
+  - title: 友链
+    url: /pages/links.html
   - title: 留言
     url: /pages/chat.html
   - title: 关于
@@ -50,3 +54,38 @@ extBaidu: true
 
 # 数学公式支持，比较影响加载速度,不需要请设置为false
 extMath: false
+
+# 友情链接
+links:
+  - title: 文科中的技术宅
+    url: https://www.townwang.com
+  - title: Auuu Nya Blog
+    url: http://mu1er.cn
+  - title: 春风十里
+    url: https://www.geek-era.com
+  - title: 阿川的个人博客
+    url: https://achuan.io
+  - title: 魏文成博客
+    url: https://www.wwc.ren
+  - title: 06m
+    url: https://www.06m.me
+  - title: 达达知识
+    url: https://www.dadapush.com
+  - title: 祈雨的博客
+    url: https://wakzz.cn
+  - title: hongCYu’s Blog
+    url: https://hongcyu.cn
+  - title: Sorryfu
+    url: https://fushaolei.github.io
+  - title: 简单的人生笔记
+    url: https://yoyling.com
+  - title: oneNeko的博客
+    url: https://blog.oneneko.com
+  - title: Py的Blogggg
+    url: https://blog.pyliubaolin.top
+  - title: Yuyao's Blog
+    url: http://hellocode.ink
+  - title: 木叶的博客
+    url: https://muye.ml
+  - title: Stansec
+    url: https://standeblog.com/
