--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,9 @@
 encoding: utf-8
 
 # SEO相关信息
-title: TMaize Blog
-description: TMaize的个人博客
-keywords: TMaize,Blog,Java,Html,JavaScript
-author: TMaize
-footerText: 'Copyright © 2016 皖ICP备16016174号'
+title: YuJing Blog
+description: HeYujing的个人博客
+author: Xiaoyu
 
 # 这些不要动
 permalink: /posts/:year/:month/:day/:title.html
@@ -39,15 +37,14 @@ menu:
     url: /pages/about.html
 
 # 点击页面文字冒出特效,不需要请设置为false
-extClickEffect: true
-
+extClickEffect: false
 # Google Adsense,不需要请设置为false
 # _includes/ext-adsense.html 里面修改为自己的配置
 extAdsense: false
 
 # 腾讯MTA移动分析,不需要请设置为false
 # _includes/ext-adsense.html 里面修改为自己的配置
-extMTA: true
+extMTA: false
 
 # 百度收录自动推送,不需要请设置为false
 extBaidu: true
